--- a/views/subtasks.handlebars
+++ b/views/subtasks.handlebars
@@ -101,7 +101,7 @@ function addSubtask(){
     <br><br>
     <button onclick="addSubtask()" class="dropbtn">Add</button>
     <br><br>
-    <a href="newProj" class="dropbtn">back</a>
+    <a href="create" class="dropbtn">back</a>
 </header>
 </body>
 </html>
