--- a/views/team.handlebars
+++ b/views/team.handlebars
@@ -118,7 +118,7 @@ function removeMember(){
       <br><br>
       <button onclick="removeMember()" class="dropbtn" id="remove">Remove team member</button>
       <br><br>
-    <a href="newProj" class="dropbtn">back</a>
+    <a href="create" class="dropbtn">back</a>
     </div>
 </header>
 
