fix some back button leading pages 2

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -59,6 +59,7 @@ function filterFunction() {
     <a href="subtasks">Manage Subtasks</a>
     <p><a href="notifications">Manage Notifications</a></p>
     <p><a href="team">Invite Team</a></p>
+    <p><a href="newProj" class="dropbtn">back</a></p>
   </div>
 </header>
 
